--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^5.1.0
   flutter_svg: ^2.0.10+1
   image_picker: ^1.1.2
+  cached_network_image: ^3.4.0
   provider: ^6.1.2
   uuid: ^4.4.2
   snap: ^2.0.0
@@ -50,6 +51,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.10.0
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.jpg"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -71,9 +77,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/linkup.jpg
-     - assets/Photo.jpg
-     - assets/logo.png
+     - assets/linkup.png
+     - assets/logo.jpg
+     - assets/sp.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
