--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_storage: ^12.1.1
   firebase_auth: ^5.1.2
   firebase_core: ^3.2.0
+  file_picker: ^5.2.2
   cloud_firestore: ^5.1.0
   flutter_svg: ^2.0.10+1
   image_picker: ^1.1.2
