--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^5.1.2
   firebase_core: ^3.2.0
   file_picker: ^5.2.2
+
   url_launcher: ^6.1.7
   cloud_firestore: ^5.1.0
   flutter_svg: ^2.0.10+1
@@ -71,6 +72,14 @@ flutter_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
+  plugin:
+      platforms:
+        linux:
+          pluginClass: FilePickerLinux
+        macos:
+          pluginClass: FilePickerMacOS
+        windows:
+          pluginClass: FilePickerWindows
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
